@@ -1,0 +1,63 @@
+<?xml version="1.0" encoding="utf-8"?>
+<extension
+	type="module"
+	version="1.6.0"
+	client="site"
+	method="upgrade">
+	<name>mod_languages</name>
+	<author>Joomla! Project</author>
+	<creationDate>February 2010</creationDate>
+	<copyright>Copyright (C) 2005 - 2010 Open Source Matters. All rights reserved.</copyright>
+	<license>GNU General Public License version 2 or later; see LICENSE.txt</license>
+	<authorEmail>admin@joomla.org</authorEmail>
+	<authorUrl>www.joomla.org</authorUrl>
+	<version>1.6.0</version>
+	<description>mod_languages_Desc</description>
+	<files>
+		<filename
+			module="mod_languages">mod_languages.php</filename>
+		<folder>tmpl</folder>
+		<filename>helper.php</filename>
+		<filename>index.html</filename>
+		<filename>mod_languages.xml</filename>
+	</files>
+	<languages>
+		<language tag="en-GB">en-GB.mod_languages.ini</language>
+	</languages>
+	<fields>
+
+		<field
+			name="header_text"
+			type="textarea"
+			rows="3"
+			cols="40"
+			default=""
+			label="mod_languages_Header_Label"
+			description="mod_languages_Header_Desc" />
+
+		<field
+			name="footer_text"
+			type="textarea"
+			rows="3"
+			cols="40"
+			default=""
+			label="mod_languages_Footer_Label"
+			description="mod_languages_Header_Desc" />
+	</fields>
+	<fields
+		group="advanced">
+		<field
+			name="layout"
+			type="modulelayout"
+			label="JFIELD_ALT_LAYOUT_LABEL"
+			description="JFIELD_ALT_MODULE_LAYOUT_DESC" />
+
+		<field
+			name="moduleclass_sfx"
+			type="text"
+			default=""
+			label="MODULES_FIELD_MODULECLASS_SFX_LABEL"
+			description="MODULES_FIELD_MODULECLASS_SFX_DESC" />
+
+	</fields>
+</extension>
