@@ -34,6 +34,7 @@ $ -> Language fix or change
 -> Deleted admin mod_stats and mod_footer in files
 
 09-Feb-2010 Christophe Demko
++ Adding a frontend language switcher module
 # Loading the user parameters when he changes them (llow the admin to change its own language for example)
 # Removing unused keys in tpl_bluestork.ini which contains the NO keyword
 # Adding the manifest files directory
